fix contact box alignment

--- a/index.css
+++ b/index.css
@@ -227,8 +227,7 @@ section {
 .about_content img{
     width: 75%;
     max-width: 700px;
-    height: fit-content;
-    height: -webkit-fit-content;
+    height: auto;
     
 }
 
@@ -567,7 +566,9 @@ swiper-slide img {
 /*--------------Contact section--------------*/
 
 .contact-box{
-    justify-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: var(--container-padding);
 }
 
